33. Ignore mouse-events on message-overlay if cancel button is hidden.
34. Update copy of QJson to 0.8.1
35. Speed up building list of songs - by only checking if file has already
    been added, not song.
36. After scanning replay gain, show original tag values in tooltips if
    different to those calculated.
37. Don't use italic text for grouped view headers.

1.3.3
-----
1. If Cantata is started whilst an instance is also running, raise window of
   current instance. (Linux only fix)
2. Add song to playqueue from albums page when double-clicked.
3. Fix display of online-service track album-artist in copy dialog.
4. Ensure library is loaded the very first time Cantata is run (ie. after
   connected to MPD via initial settings wizard).
5. When song is updated in context view, abort any current network jobs.

1.3.2
-----
 1. In cover/artist dialog, when attempting to save an image into Cantata's
    cache folder - ensure the 'covers' sub-folder is created.
 2. When saving artist image from cover dialog, if set to save in MPD folder and
    song's path does not have 2 folder elements then save in cache folder.
    Cantata will only save artist images, and backdrops, in MPD folder if the
    folder structure is (e.g.) Artist/Album/Track.mp3
 3. Use case-insensitive sort of folder view items when adding to playqueue.
 4. When determining the 'basic' artist of a track, if albumartist is set and
    artist is not, then use albumartist.
 5. For the web-links in the context view, replace ampersand and question mark
    characters in artist names with the relevant URL encoding.
 6. Use CMake to locate X11 libraries and headers.
 7. Set minimum size for initial settings wizard.
 8. If buddy of a checkbox or radio is clicked, then toggle check or radio.
 9. Disable context-view cancel actions until a job is created.
10. When searching models, also search composer field.
11. Fix enabling of "Initially collapse albums" in playlists settings tab.