@@ -58,6 +58,7 @@
 36. After scanning replay gain, show original tag values in tooltips if
     different to those calculated.
 37. Don't use italic text for grouped view headers.
+38. Save scaled covers as PNG files.
 
 1.3.3
 -----
